--- a/_config.yml
+++ b/_config.yml
@@ -81,8 +81,8 @@ analytics:
 # Site Author
 author:
   name             : "WANG HAXNIANG"
-  avatar           : "hanxiang.jpeg"
-  bio              : "Your biography for the left-hand sidebar"
+  avatar           : "/images/hanxiang.jpeg"
+  bio              : "PhD in Sejong University"
   location         : "Location"
   employer         :
   pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
