--- a/_config.yml
+++ b/_config.yml
@@ -81,9 +81,9 @@ analytics:
 # Site Author
 author:
   name             : "WANG HAXNIANG"
-  avatar           : "/images/hanxiang.jpeg"
+  avatar           : "images/hanxiang.jpeg"
   bio              : "PhD in Sejong University"
-  location         : "Location"
+  location         : "Seoul"
   employer         :
   pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?hl=zh-CN&user=w5epAMEAAAAJ"
