--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "WANG HAXNIANG"
-  avatar           : "hanxiang.jpeg"
+  avatar           : "hx.png"
   bio              : "PhD in Sejong University"
   location         : "Seoul"
   employer         :
